fix: fix spacing around text

--- a/css/terminal.css
+++ b/css/terminal.css
@@ -19,6 +19,7 @@ body {
 
 p {
   color: #c9d3d6;
+  padding-right: 12%;
 }
 
 pre {
